# slap-trigger

./: .gitignore  CLAUDE.md  README.md  config.json  install.sh  pyproject.toml  run.sh  uninstall.sh
docs/plan/: plan-2026-04-18-modifier-fix.md
slap_trigger/: __init__.py  cli.py  config.py  detector.py  keyboard.py  logger.py
